# template-fastapi

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
python/: main.py
python/data/: data_error.py  data_health.py
python/middleware/: middleware_http.py
python/routers/: route_exception_handler.py  route_main.py
python/services/: service_health.py
tests/: test_route_main.py
